--- a/coding_101/index.html
+++ b/coding_101/index.html
@@ -24,9 +24,9 @@
   <li>I'm a big podcast fan, I'm currently listening to: Broken Record, Revisionist History, and My Favorite Murder</li>
 </ul>
 
-<img class="center" src="images/bellauga.jpg" alt="Bella University of Georgia" style="width:400px;height:300px;">
-<img class="center" src="images/bellafriends.jpg" alt="Bella Friends"  style="width:300px;height:400px;">
-<img class="center" src="images/morefriends.jpg" alt="More Friends"  style="width:400px;height:300px;">
+<img class="center" src="Images/bellauga.jpg" alt="Bella University of Georgia" style="width:400px;height:300px;">
+<img class="center" src="Images/bellafriends.jpg" alt="Bella Friends"  style="width:300px;height:400px;">
+<img class="center" src="Images/morefriends.jpg" alt="More Friends"  style="width:400px;height:300px;">
 
 
 </body>
